fixed spacing css

--- a/public/css/multus.css
+++ b/public/css/multus.css
@@ -9,7 +9,7 @@
 	color: #CC00AA;
 }
 
-@font-face {
+/*@font-face {
     font-family: 'OpenSansLight';
     src: url('fonts/fonts/OpenSans-Light-webfont.eot');
     src: url('fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
@@ -18,8 +18,8 @@
          url('fonts/OpenSans-Light-webfont.svg#OpenSansLight') format('svg');
     font-weight: normal;
     font-style: normal;
+*/
 
-}
 
 .login-page {
   background-color: #FAFAFA;
